@@ -2,28 +2,26 @@
 Hash: SHA256
 
 AUX agedu-r9671-fix-automagic.patch 1847 SHA256 64230e46ec27d5da72f50ca455af46e4ac4dfbf922a8b9f89859c1d109eb321c SHA512 a85805f0d8bbb61964719d246d033c9423fa90f4b7a29fa4d48bd0ef69ee58304b6fa45b9c0a6024f0f05ff64dd164d23cb93791e0f1611363a51bfc993d00e0 WHIRLPOOL 7d8be526757f483ff8625e8f6ce3d07e9533f8becaf841157feafd27342c264dd279cc09ea7870f1ee6eefb63f19bcf3697c8fac5a29d418ffb81d6b7ebefbce
-DIST agedu-20140925.r10244.tar.gz 163788 SHA256 5b9b999eb0c5170f43db20b9dbb8b926fe049a38d4d4dad7e197d6b273602d0e SHA512 bb55040bd1f59c7d0aea1101007553ee4fab14fbdcd6e62dbbfb3111a4b28881e6eb18e7bf992dd03baf688481f9a5eb6f600e383b56409a77f223e241bbb6d4 WHIRLPOOL 42596d7b38e0ee8e47cd4af5cecbe01c67e0a6ba6e7877b00f932bd57cf6923ba8c542216668e28e66bbb87de5d36979ee0566eaa650c32f44cd2214378e1906
 DIST agedu-20141024.r10297.tar.gz 164175 SHA256 2760df3b2e37ec0a472a1630fcd53f61443e76ddb7daabb907ada77d3a580ce0 SHA512 1fe2344b5542f9c2b316ef294e25364590384723c0d56f1fcf1d1518d18dcb34daa1ba35bc23be5cb0723e0d2e278e05d21852e075bc656b6df51d94b8c3a08d WHIRLPOOL 0f59bd5f7d652f429788677fed2cf6e223223a227533434719be6aab5638b2d082989274656b2ef41adc754884fe7aa2f89447114e2dd17e51dbd8fb2ceb0597
-DIST agedu-r10126.tar.gz 163868 SHA256 27b70890f3477f11cd96bc33de6e3e9aaecd958bb5cc43c308a127045d14b6d8 SHA512 e92572e751eba357f05ac226f83911c2ec44d68bcd7805f230675d166e7f16f5e3fd7c747eb032a9a5472c1511914b170a44b474cf2f3e3490b8c60da5d450df WHIRLPOOL 098270c641b9796edab5ee20149198bc434d9a510c7cd487b29a29dc83f46efbf2133625711131ec3d3c9c0861f2daaa50b03a3e1a7075a6986ebe5a16982816
-EBUILD agedu-10126.ebuild 794 SHA256 c01b6c346232193e56595836b740d44ca9b0533179c78769e39bc1b6e9bcea94 SHA512 44b783dc67b313a4eb9c28d150b388450d23282a480dc55121482d7c1f2bac72a4e62abdfd92a8b54604aafcf8ef4f4e4a7daf8f3fad9e5dd9fb94b1a4ed2521 WHIRLPOOL b3f9d20fe4ac5435d4da655a8966f8e0703006a9ac30661392d8c294d304f124518120ef5733d32001e73a5ebf1e400a44d933a764297f4db2aa79ec8d03a904
-EBUILD agedu-20140925.10244.ebuild 879 SHA256 8d0a464ecfc1bf552b74802b55c87f955fe1a0ca91004105f860687190867ad8 SHA512 3cb33e714103252390ea9134dea1d87557e49a5e8c19c96aacd0ddca050699987803150dfac06d33c06e0004587da91dcdd7a59605c4cbbfc157dfff02c0a2fe WHIRLPOOL a6b74a8090db23debd4a8ad5401660059ee6faef4632336c630b31d4abe16cf1e2fb445cdd86ce396e18d1c80eee877869fd3ded9bd82e3751d4d3e00e2a3ebd
+DIST agedu-20150422.3922.tar.gz 164771 SHA256 4314c8f991bb6a9bf8d0792737be4f51141a87627ad867f515e07d8b7f0922eb SHA512 77833c369e4647b00eebe671152345b2a4adc01b40fe1f51f1d8f9e1258b11b55dc3441997aa135ecfe5f36598afbb6566108caa1178a94f5a34d9b7904f14f4 WHIRLPOOL 7b84a775bd4af3c3b59039af880bcdb0363ffbf4f40e49396659d21ba5bab14865bae84c1b1890341a34ed1bf48c7a5d383053ec904ccf9e67e39c485c03f625
 EBUILD agedu-20141024.10297.ebuild 879 SHA256 c808671c817d3aa114c91a84370ef3d9fe9661a739ee8ad408ab6fae528be2d9 SHA512 506e84659924ca2e2091fb888363d3a597eab85a0bc37474749fa54dcbc942689b2534bfa626cc8c6847a61bda156ff7877724d30550206e046907b8dbac874e WHIRLPOOL a1d57ad140439373ab0488c683b2d673a55f23b56afdfd04d35b11f7b6d6366e64ecdf152a592ff8038c6530253d24968676bae06ba44904af9bdab65db58ef4
-MISC ChangeLog 1056 SHA256 87ec5bfc4ae0c2cc10ed3c09b25ee63772cdcf2ab607ef7baccf21d627fc4fb4 SHA512 5e68ae38531e6d75f10a9524bf2879805384f949331f9d348fac6955ceed50b34a255dd01d7226a4e5b2dddc89e6c14b471f39f568db8092d001efd233d26cde WHIRLPOOL 0e6d6501df56883833af541f7216ae5cf66bafa5d56add5ac1671a0eb4a56e378524fec7fb9e05c7b3b821ddf26c087d7f7d07d8b5eb388034ff1b7b623886c7
+EBUILD agedu-20150422.3922.ebuild 901 SHA256 8194b06b954cb3c8dedface38b4b8d66ebedf2a228150f94194ce4cce9ce3906 SHA512 e6a0097e50f9e0666d6736732d412045fddbceec8f94836da65a7cbf50f02a4b8d30b5d620396fe73d6caafdb6c1339588f5206d4314e1e3939c878db1b57ce7 WHIRLPOOL e74da4e9cb8a9d82a2e2b7d4c45977afc022b5e330f6bc375cb07defd61bab6d6ee2644e16099e5ec2c3185f48e8a931917f7eb1ddcb1949e7f7e0dc247590a4
+MISC ChangeLog 1261 SHA256 b2daf3dc7f0215fcd5277f4d63991af0ca5ba633436c67c22f0f9555ebd92cd6 SHA512 a170dea7e4779bf1a47f48ff1a6dc4632981d821cd77f77c0c31058d0743430f45939d8c0c007b1bce36f865befeb9810195a26a91c6adb599cdacf5e62c6e49 WHIRLPOOL d328e04898828db3e823a4d4e14d5d6d6757a1e478054ec53337f6d96cf81910100266098ce34761ab25913aebff9193acd7fe6bb467aec6ec5b6e0072edb253
 MISC metadata.xml 238 SHA256 f13e6e7b65d20beb9ae945d520160ef0dba80c1965754958945904d7e3c0a75f SHA512 3c3d75f1cb90ffcfb98df47481fbde6d451254a29fa87577acd25bc27cbcc3e5dbc0c1efce5974be905428f0b7caf912c8b051417aff92763847fa377493a153 WHIRLPOOL 6ec3d597b87aff99014404b8b732e6f600aafc3c3eeebfab135c9c19cde2e43161cfa23f841bd72826cc3393b724e1dac115c15dcce2b74ace6f1d6ec209dbf3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUSkStAAoJEJOE+m71LUu6FFEP/07driQtmG1Z44qUedHKugQF
-EdRpBGsGM9xYVkyOKNhCzEt4MnoWlOr1+G/l7le1Dbl/3w1iCS6/rQ7yuEkgv3yt
-asUIQiEMkaI2iS5JeZysNQcoYsDWUHweYSST2eOfpwW6yvP3nNMKO337bdgf/7TD
-G7MxRtYhwWWoieq6B14a4XFgwol7ThjcpZGmQtddvew70cUou0T091+JZuaZL09e
-sw5rkt6bKmXAVqgdakr4k8zDcxjjUNOw/D6sw5OV0BK2tl42EQLVKAzRvMJAE93h
-qPY76j4JarIZ8uQX0qFB5+4i6ZHQUjkwiEOi/zY2CENr49vg7jZGyUZ6PqdYEedi
-7Z4dqZIqjPeDvHfdhNhCBAh/PVfz7XAfQYORT6fcuLgt/KPYQNs+obKo/iSpBbtl
-BLLpX/cRKv0H+DfXldcx7GmSHMKlOOK0cLlkFdhL8N65fUGXlSUKfmJQcjHInrIu
-FrwPCjRvObHZTnxsu5f2fFCM/o1xJdrHwv0bwXBTmiYILXjgc/Q9zEAqaojK8zk3
-HAqKdC2c1hZkHUVrrK+MHO3VhBhZbrpvjSj87MwJMEjZF6fry8FGAkvrtf2Vulhv
-jiA8VZEn6oyO6Yo9n+d6F+WHw99Mr/fISDDTCq0em8W1/GwG1tqz/NIXdkC1jDWh
-sBmq4fFtWRNpXHBQgXBb
-=ZLqG
+iQIcBAEBCAAGBQJVN4Z5AAoJEJOE+m71LUu6lg0QAKjQT+4DRAUjbSedaV0AW6ak
+Q229V4U6TtKZrulRM6gFT//UEa5NiYdIO9C8fsHkJf/Rkz33wT1qFC5TzaDBGDnk
+s7xJ3uwNt05CH72/wUO7oSc3V1mnKR3gfrO1Vspf5zOwtP9Ud+3BoTKMj5remeYG
+4WoAleUFtNnhqziF/JKUR/MXhroA9pTEp0kVTIgr5zrfVXHj1VIONlyXRCqcvzYA
+6DATbPMW8SdKCUb9lOpmSLOc6pnDzm79plL8OIfQqu78R1fTqEO4QIiTzmMl3Tmy
+Si/RdO8OaJsniJE0nMNB5DGVFwd2XMarEzHerzPCSOEHnSs0ZXsbdWKzykyffmcV
+/jgqQ3kH+KVcC8c6aXg0ftVy3EFoSplbEfHA36j21YCp3iDJ631m8gE4hlB7q1vJ
+Rqc38/PKl2EcRIu+j842HD10RMeKYud3YLonVvFx7r/vZ5V52sp5e/gDaHr/Zd/p
+MnsytOE2S9TxKXTdk4eOIYWs93zdmu7BG9knoeEPFcGyy+rjIgaDVH3OZEbF0X6s
+UhCPtLkcxaIbPVxSDImd5uzI0sIj82g3pnvvmv+9rR608mc1a1m1ndoBzMbL5hmI
+CRN76mEEITM6UOpipRoQ4SUE51n74kkwcPyges5YctaZqjbSE6F1ItNsi7CR2FB9
+zbmbUAxHV93Gja9WEsVW
+=0/ca
 -----END PGP SIGNATURE-----
